# sdl-test

./: CMakeLists.txt  Makefile  blender.txt  todo.txt
assets/: a.spv  default.frag  default.frag.spv  default.vert  default.vert.spv
code/: game_math.cpp  main.cpp
